--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:card_view="http://schemas.android.com/tools">
     <data>
         <import type="android.view.View" />
         <variable
                 name="headword"
-                type="com.example.lukas.myapplication.Headword"/>
+                type="com.example.lukas.vokabularwebovy.models.Headword"/>
     </data>
     <android.support.v7.widget.CardView
             android:id="@+id/cv"
