--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -27,9 +27,22 @@
                     android:textSize="24sp"
                     android:id="@+id/headword"
             />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{headword.bookName}"
+                    android:textSize="18sp"
+                    android:id="@+id/bookName"
+            />
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:id="@+id/content">
             <ProgressBar
                     android:id="@+id/progressBar1"
-                    style="?android:attr/progressBarStyleLarge"
+                    style="?android:attr/progressBarStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
@@ -50,6 +63,7 @@
                        android:src="@{headword.img}"
                        android:visibility="@{headword.isImage || headword.isReady ? View.VISIBLE : View.GONE}"
             />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </layout>
