--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,16 @@
                 layout="@layout/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
         <FrameLayout
                 android:id="@+id/contentFrame"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
+    <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager" android:layout_width="match_parent"
+            android:layout_height="match_parent" android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
