--- a/app/src/main/res/layout/informations_fragment.xml
+++ b/app/src/main/res/layout/informations_fragment.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:text="@string/informations"
-              android:id="@+id/informations_tv"
-              android:scrollbars = "vertical"/>
+    <WebView android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:id="@+id/informations_webview"
+             android:scrollbars = "vertical" />
+
 </LinearLayout>
