--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -13,5 +13,10 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
+    <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_gravity="center" android:background="?attr/colorPrimary"
+            android:visibility="gone" android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize" />
 </android.support.design.widget.AppBarLayout>
