--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -43,7 +43,7 @@
             <ProgressBar
                     android:id="@+id/progressBar1"
                     style="?android:attr/progressBarStyleSmall"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:visibility="@{headword.isReady ? View.GONE : View.VISIBLE}"
