--- a/app/src/main/res/layout/informations_fragment.xml
+++ b/app/src/main/res/layout/informations_fragment.xml
@@ -4,6 +4,14 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <ProgressBar
+            android:id="@+id/informations_progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="visible"
+    />
     <WebView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/informations_webview"
