--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,13 +10,9 @@
             android:fitsSystemWindows="true"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="56dp"
             android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
-    <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="center" android:background="?attr/colorPrimary"
-            android:visibility="gone" android:fitsSystemWindows="true"
-            android:minHeight="?attr/actionBarSize" />
+
 </android.support.design.widget.AppBarLayout>
